<resources>
    <string name="app_name">DoPlanner</string>
    <string name="dpl_login">Login</string>
    <string name="dpl_cancel">Batal</string>
    <string name="dpl_submit">Submit</string>
    <string name="dpl_login_google">Login with Google</string>
    <string name="dpl_login_email">Login with Email</string>
    <string name="dpl_dosen">Dosen</string>
    <string name="dpl_mahasiswa">Mahasiswa</string>
    <string name="dpl_hint_email">Email</string>
    <string name="dpl_hint_password">Password</string>
    <string name="dpl_hint_password_baru">Password Baru</string>
    <string name="dpl_hint_password_ulang">Konfirmasi Password</string>
    <string name="dpl_register">Register</string>
    <string name="dpl_signup">Sign Up</string>
    <string name="dpl_lupa_password">Lupa password?</string>
    <string name="dpl_change_password">Ganti Password</string>
    <string name="dpl_reset_password">Reset Password</string>
    <string name="dpl_instruksi_lupa_password">Masukkan email anda untuk mereset password.
        Ikuti langkah-langkah yang terdapat dalam email yang anda terima.</string>
    <string name="dpl_hint_nama">Nama</string>
    <string name="dpl_hint_jurusan">Jurusan</string>
    <string name="dpl_jadwal">Jadwal</string>
    <string name="dpl_tugas">Tugas</string>
    <string name="dpl_daftar_mahasiswa">Daftar Mahasiswa</string>
    <string name="dpl_appbar_jadwal">Jadwal</string>
    <string name="dpl_tambah_jadwal">Tambah Jadwal</string>
    <string name="dpl_appbar_tugas">Tugas</string>
    <string name="dpl_tambah_tugas">Tambah Tugas</string>
    <string name="dpl_item_tugas_deadline">Deadline:</string>
    <string name="dpl_tambah_mahasiswa">Tambah Mahasiswa</string>
    <string name="dpl_appbar_mahasiswa">Daftar Mahasiswa</string>
    <string name="dpl_tv_kelas">Kelas</string>
    <string name="dpl_menu_utama">Menu Utama</string>
    <string name="dpl_akun">Akun</string>
    <string name="dpl_pengaturan">Pengaturan</string>
    <string name="dpl_log_out">Log Out</string>
    <string name="dpl_edit_akun">Edit Akun</string>
    <string name="dpl_matkul">Mata Kuliah</string>
    <string name="dpl_media_pembelajaran">Media Belajar</string>
    <string name="dpl_link_belajar">Link Belajar (Opsional)</string>
    <string name="dpl_nama_tugas">Nama Tugas</string>
    <string name="dpl_tanggal">Tanggal</string>
    <string name="dpl_jam">Jam</string>
    <string name="dpl_detail_tugas">Detail Tugas</string>
    <string name="dpl_nama">Nama</string>
    <string name="dpl_nim">NIM</string>
    <string name="dpl_signup_success_description">Sign up sukses. Silahkan lihat email untuk verifikasi</string>
    <string name="dpl_one_more">Sedikit lagi!</string>
    <string name="dpl_setup_description">Setup ini hanya dijalankan satu kali sesudah login pertama. Silahkan isi untuk lanjut.</string>
    <string name="dpl_hint_password_lama">Password Lama</string>
    <string name="dpl_hint_password_ulang_baru">Konfirmasi Password Baru</string>
    <string name="dpl_forbid_empty">Tidak boleh kosong</string>
    <string name="dpl_tugas_description">Deskripsi Tugas</string>
    <string name="dpl_optional">Opsional</string>
    <string name="dpl_tv_tanggal_deadline">Tanggal Deadline</string>
    <string name="dpl_edit_jadwal">Edit Jadwal</string>
    <string name="dpl_edit_tugas">Edit Tugas</string>
    <string name="dpl_description">Deskripsi</string>
</resources>