<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dpl_reset_password"
        app:layout_constraintBottom_toTopOf="@id/tv_deskripsi_lupa_password"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tv_deskripsi_lupa_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dpl_instruksi_lupa_password"
        app:layout_constraintBottom_toTopOf="@id/ti_email_lupa_pass"
        style="@style/TextAppearance.AppCompat.Caption"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email_lupa_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/dpl_hint_email"
        app:startIconDrawable="@drawable/ic_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/bt_submit_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_submit_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpl_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpl_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp" />



</androidx.constraintlayout.widget.ConstraintLayout>