<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/dpl_hint_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/dpl_hint_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/ti_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_submit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpl_login"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:paddingHorizontal="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpl_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        app:layout_constraintEnd_toStartOf="@id/bt_submit_email"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>